tdf#116234 Apply email settings just set

Email configuration that is entered in the SwMailConfigDlg
dialog is written to the (global) configuration, while
the existing SwMailMergeConfig item 'xConfigItem'
was not updated, so the newly entered values for
the email server connection weren't applied for
the current mail merge previously.

In order to have them take effect, take over the
new settings to 'xConfigItem' from the global
config where those were just set.

Change-Id: If0dae3ce26af797ffa728dca96f08dce3197557c
Reviewed-on: https://gerrit.libreoffice.org/79847
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>